--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/quill/dist/quill.snow.css",
+              "./node_modules/quill/dist/quill.core.css"
             ],
             "scripts": [
             ]
